--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_BASE_URL=https://medical-store-node.vercel.app/api/v1
+# REACT_APP_API_BASE_URL=https://medical-store-node.vercel.app/api/v1
+REACT_APP_API_BASE_URL=http://localhost:5000/api/v1
