--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^19.1.2",
     "axios": "^1.8.4",
     "formik": "^2.4.6",
+    "primereact": "^10.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
